--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ notbook
 numpy
 matplotlib
 seaborn
-python-box==6.0.2
+python-box #==6.0.2
 pyYAML
 tqdm
-ensure==1.0.2
+ensure #==1.0.2
 joblib
 types-PyYAML
 scipy
